--- a/js/frame.css
+++ b/js/frame.css
@@ -2,7 +2,7 @@
     border-radius: 25px;
     border: 2px solid #D0D0D0;
     padding: 20px; 
-    width: 180px;
+    width: 270px;
     height: 220px;    
 }
 #rcorners2 {
@@ -25,4 +25,11 @@
     padding: 10px; 
     width: 80px;
     height: 1px;    
+}
+#rcorners5 {
+    border-radius: 3px;
+    border: 3px solid #F0F0F0;
+    padding: 1px; 
+    width: 250px;
+    height: 150px;    
 }
